# MatrixCF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  matrix.cl
examples/: CMakeLists.txt  async.cpp  cache.cpp  cpy.cpp  equals.cpp  example_cpu.cpp  example_gpu.cpp  full.cpp  full_reduce.cpp  gen.cpp  hsplit.cpp  hstack.cpp  hstack_multiple.cpp  main.cpp  map.cpp  map_reduce.cpp  mul.cpp  mul_value.cpp  reduce.cpp  serialization.cpp  shape.cpp  temp.cpp  transform.cpp  transpose.cpp  view.cpp  vsplit.cpp  vstack.cpp  vstack_multiple.cpp
include/MatrixCF/: MatrixCF.hpp
tests/: CMakeLists.txt  base.cpp
